examples/neg/namer/overloading-nil.effekt
def Nil(): Int = 42

def destruct(l: List[Int]) = l match {
  case Nil() => 0
  case Cons(_, _) => 1
}

def main() = ()